<resources>
    <!-- Nombre del proyecto-->
    <string name="app_name">SaludMovil</string>

    <!-- ****************************************** -->

    <!-- Texto de la interfaz "activity_login" -->

    <!-- Encabezado de la interfaz "activity_login" -->
    <string name="Txt_tit_login">Salud Móvil</string>
    <string name="Txt_sub_login">Inicia Sesión</string>

    <!-- cuerpo de la interfaz "activity_login" -->
    <string name="Txt_fld_usuario">Usuario</string>
    <string name="Txt_fld_dni">DNI</string>
    <string name="Txt_fld_contrasena">Contraseña</string>
    <string name="Txt_btn_iniciar">Iniciar Sesión</string>

    <!-- pie de la interfaz "activity_login" -->
    <string name="Txt_fld_registrate">Regístrate</string>

    <!-- ****************************************** -->

    <!-- Texto de la interfaz "activity_registrar" -->

    <!-- Encabezado de la interfaz "activity_login" -->
    <string name="Txt_sub_registar">Registro de nuevo usuario</string>

    <!-- cuerpo de la interfaz "activity_login" -->
    <string name="txt_fld_correo">Correo Electrónico</string>
    <string name="Txt_fld_confirmacion">Confirmar Contraseña</string>
    <string name="txt_btn_registrar">Registrar</string>

    <!-- pie de la interfaz "activity_login" -->
    <string name="Txt_btn_retorno">Ya tengo una cuenta</string>

    <!-- ****************************************** -->

    <string name="Txt_sub_login_doctor">Acceso para Profesionales</string>
    <string name="Txt_fld_cmp">Número de Colegiatura (CMP)</string>
    <string name="Txt_btn_registrar_doctor">Registrarme como doctor</string>

    ```


    <!-- Texto de la interfaz "activity_inicio" -->

    <!-- cuerpo de la interfaz "activity_inicio" -->
    <string name="Txt_fld_mi_perfil">Mi Perfil</string>
    <string name="Txt_fld_cita">Agenda tu cita</string>
    <string name="Txt_fld_recetas">Recetas Médicas</string>
    <string name="txt_fld_especialidades">Especialidades</string>
    <string name="txt_fld_historial">Mi historial de citas</string>
    <string name="txt_fld_csesion">Cerrar sesión</string>
    <string name="Txt_fld_ubicanos">Ubícanos</string>

    <!-- ****************************************** -->

    <!-- Texto de la interfaz "activity_especialidades" -->

    <!-- Encabezado de la interfaz "activity_especialdiades" -->
    <string name="Txt_tit_Especialidades">Especialidades</string>
    <string name="Txt_sub_Especialdiades">Descubre el tipo de especialista necesitas</string>

    <!-- cuerpo de la interfaz "activity_especialidades" -->
    <string name="Txt_fld_medicinaGeneral">Médico General</string>
    <string name="Txt_fld_odontologia">Dentista</string>
    <string name="Txt_fld_pediatria">Pediatra</string>
    <string name="Txt_fld_nutricionista">Nutricionista</string>

    <!-- Cambios -->
    <string-array name="opciones_sexo">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Otro</item>
    </string-array>

    <string-array name="opciones_tipo_sangre">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>


</resources>