<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_fondo_app" tools:context=".LoginDoctorActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        app:cardBackgroundColor="@color/blanco"
        app:cardCornerRadius="28dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imageViewLogoDoctor"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logito4" />

            <TextView
                android:id="@+id/textViewSubtituloDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="24dp"
                android:text="@string/Txt_sub_login_doctor"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="@color/texto_secundario"
                android:textSize="21sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDoctorCodigo"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Txt_fld_cmp"
                app:startIconDrawable="@drawable/ic_baseline_badge_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDoctorCodigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutDoctorClave"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/Txt_fld_contrasena"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_baseline_security_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDoctorClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonLoginDoctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="@color/azul_primario"
                android:paddingVertical="12dp"
                android:text="@string/Txt_btn_iniciar"
                android:textSize="16sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿No tienes una cuenta?"
            android:textColor="@color/texto_secundario"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textViewNuevoDoctor"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Txt_btn_registrar_doctor"
            android:textStyle="bold"
            android:textColor="@color/azul_secundario"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>